--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+auth0.audience=${AUTH0_AUDIENCE}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${AUTH_SERVER_URI}
+
+spring.security.oauth2.client.registration.auth0.client-id=${AUTH_CLIENT_ID}
+spring.security.oauth2.client.registration.auth0.client-secret=${AUTH_CLIENT_SECRET}
+spring.security.oauth2.client.provider.auth0.issuer-uri=${AUTH_SERVER_URI}
