--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ plugins {
     id("org.jetbrains.kotlin.plugin.jpa") version "1.9.23"
 }
 
-group = 'com.IngsisMEGE'
-version = '1.0-SNAPSHOT'
+group = 'testManager'
+version = '0.0.1-SNAPSHOT'
 
 java {
     sourceCompatibility = '17'
